5at8無網不利-網站架設 這是我的網站 歡迎大家進來坐坐 http://5at8.twidv.net http://100243.5at8.com

--- a/index.html
+++ b/index.html
@@ -1,91 +1,195 @@
-<!DOCTYPE html>
 <html>
 <head>
-  <meta charset='utf-8'>
-
-  <title>5at8/5at8----------5at8----------5at8----------5at8----------5at8----------- @ GitHub</title>
-
-  <style type="text/css">
-    body {
-      margin-top: 1.0em;
-      background-color: #ca2630;
-      font-family: Helvetica, Arial, FreeSans, san-serif;
-      color: #ffffff;
-    }
-    #container {
-      margin: 0 auto;
-      width: 700px;
-    }
-    h1 { font-size: 3.8em; color: #35d9cf; margin-bottom: 3px; }
-    h1 .small { font-size: 0.4em; }
-    h1 a { text-decoration: none }
-    h2 { font-size: 1.5em; color: #35d9cf; }
-    h3 { text-align: center; color: #35d9cf; }
-    a { color: #35d9cf; }
-    .description { font-size: 1.2em; margin-bottom: 30px; margin-top: 30px; font-style: italic;}
-    .download { float: right; }
-    pre { background: #000; color: #fff; padding: 15px;}
-    hr { border: 0; width: 80%; border-bottom: 1px solid #aaa}
-    .footer { text-align:center; padding-top:30px; font-style: italic; }
-  </style>
+<title>5at8無網不利-網站架設,5at8無網不利-網頁製作,5at8無網不利-免費網址,5at8無網不利-網路行銷,5at8無網不利-虛擬主機出租</title>
+<meta http-equiv="Pragma" content="No-cache">
+<meta http-equiv="Content-Type" content="text/html; charset=big5">
+<meta name="Keywords" content="5at8無網不利-網站架設,5at8無網不利-網頁製作,5at8無網不利-免費網址,5at8無網不利-網路行銷,5at8無網不利-虛擬主機出租,5at8無網不利-網站排名,5at8無網不利-SEO優化,5at8無網不利-電子書製作,5at8無網不利-表單製作,5at8無網不利-購物車撰寫,5at8無網不利-網頁設計,5at8無網不利-網頁設計,5at8無網不利-網路賺錢,5at8無網不利-網路創業,5at8無網不利-兼職,5at8無網不利-在家工作,5at8無網不利-網路商店,5at8無網不利-通路,5at8無網不利-網頁平台">
+<meta name="description" content="5at8無網不利-網站架設,5at8無網不利-網頁製作,5at8無網不利-免費網址,5at8無網不利-網路行銷,5at8無網不利-虛擬主機出租,5at8無網不利-網站排名,5at8無網不利-SEO優化,5at8無網不利-電子書製作,5at8無網不利-表單製作,5at8無網不利-購物車撰寫,5at8無網不利-網頁設計,5at8無網不利-網頁設計,5at8無網不利-網路賺錢,5at8無網不利-網路創業,5at8無網不利-兼職,5at8無網不利-在家工作,5at8無網不利-網路商店,5at8無網不利-通路,5at8無網不利-網頁平台">
+<meta name="classification" content="5at8無網不利-網站架設,5at8無網不利-網頁製作,5at8無網不利-免費網址,5at8無網不利-網路行銷,5at8無網不利-虛擬主機出租,5at8無網不利-網站排名,5at8無網不利-SEO優化,5at8無網不利-電子書製作,5at8無網不利-表單製作,5at8無網不利-購物車撰寫,5at8無網不利-網頁設計,5at8無網不利-網頁設計,5at8無網不利-網路賺錢,5at8無網不利-網路創業,5at8無網不利-兼職,5at8無網不利-在家工作,5at8無網不利-網路商店,5at8無網不利-通路,5at8無網不利-網頁平台">
+<meta name="summary" content="5at8無網不利-網站架設,5at8無網不利-網頁製作,5at8無網不利-免費網址,5at8無網不利-網路行銷,5at8無網不利-虛擬主機出租,5at8無網不利-網站排名,5at8無網不利-SEO優化,5at8無網不利-電子書製作,5at8無網不利-表單製作,5at8無網不利-購物車撰寫,5at8無網不利-網頁設計,5at8無網不利-網頁設計,5at8無網不利-網路賺錢,5at8無網不利-網路創業,5at8無網不利-兼職,5at8無網不利-在家工作,5at8無網不利-網路商店,5at8無網不利-通路,5at8無網不利-網頁平台"><meta name="robots" content="all">
+<meta name="robots" content="index,follow">
+<meta name="rating" content="general">
+<meta name="distribution" content="global">
+<meta name="content-Language" content="zh-tw">
+<meta http-equiv="expires" content="0">
+<meta name="spiders" content="all">
+<meta name="webcrawlers" content="all">
 </head>
-
 <body>
-  <a href="http://github.com/5at8/5at8----------5at8----------5at8----------5at8----------5at8-----------"><img style="position: absolute; top: 0; right: 0; border: 0;" src="http://s3.amazonaws.com/github/ribbons/forkme_right_darkblue_121621.png" alt="Fork me on GitHub" /></a>
-
-  <div id="container">
-
-    <div class="download">
-      <a href="http://github.com/5at8/5at8----------5at8----------5at8----------5at8----------5at8-----------/zipball/master">
-        <img border="0" width="90" src="http://github.com/images/modules/download/zip.png"></a>
-      <a href="http://github.com/5at8/5at8----------5at8----------5at8----------5at8----------5at8-----------/tarball/master">
-        <img border="0" width="90" src="http://github.com/images/modules/download/tar.png"></a>
-    </div>
-
-    <h1><a href="http://github.com/5at8/5at8----------5at8----------5at8----------5at8----------5at8-----------">5at8無網不利-網站架設 5at8無網不利-網頁製作 5at8無網不利-免費網址 5at8無網不利-網路行銷 5at8無網不利-虛擬主機出租</a>
-      <span class="small">by <a href="http://github.com/5at8">5at8</a></span></h1>
-
-    <div class="description">
-      5at8無網不利-網站架設 5at8無網不利-網頁製作 5at8無網不利-免費網址 5at8無網不利-網路行銷 5at8無網不利-虛擬主機出租 5at8無網不利-網站排名 5at8無網不利-SEO優化 5at8無網不利-電子書製作 5at8無網不利-表單製作 5at8無網不利-購物車撰寫 5at8無網不利-網頁設計 5at8無網不利-網路商店 5at8無網不利-網路賺錢 5at8無網不利-網路創業 5at8無網不利-兼職 5at8無網不利-在家工作 5at8無網不利-網賺 5at8無網不利-通路 5at8無網不利-網路空間
-    </div>
-
-    <p>5at8無網不利-網站架設
-這是我的網站
-歡迎大家進來坐坐
-http://5at8.twidv.net
-http://100243.5at8.com</p><h2>Dependencies</h2>
-<p>5at8無網不利-網站架設 5at8無網不利-網頁製作 5at8無網不利-免費網址 5at8無網不利-網路行銷 5at8無網不利-虛擬主機出租 5at8無網不利-網站排名 5at8無網不利-SEO優化 5at8無網不利-電子書製作 5at8無網不利-表單製作 5at8無網不利-購物車撰寫 5at8無網不利-網頁設計 5at8無網不利-網路商店 5at8無網不利-網路賺錢 5at8無網不利-網路創業 5at8無網不利-兼職 5at8無網不利-在家工作 5at8無網不利-網賺 5at8無網不利-通路 5at8無網不利-網路空間</p>
-<h2>Install</h2>
-<p>5at8無網不利-網站架設
-這是我的網站
-歡迎大家進來坐坐
-http://5at8.twidv.net
-http://100243.5at8.com</p>
-<h2>License</h2>
-<p>5at8無網不利-網站架設 5at8無網不利-網頁製作 5at8無網不利-免費網址 5at8無網不利-網路行銷 5at8無網不利-虛擬主機出租 5at8無網不利-網站排名 5at8無網不利-SEO優化 5at8無網不利-電子書製作 5at8無網不利-表單製作 5at8無網不利-購物車撰寫 5at8無網不利-網頁設計 5at8無網不利-網路商店 5at8無網不利-網路賺錢 5at8無網不利-網路創業 5at8無網不利-兼職 5at8無網不利-在家工作 5at8無網不利-網賺 5at8無網不利-通路 5at8無網不利-網路空間</p>
-<h2>Authors</h2>
-<p>5at8無網不利-網站架設<br/>這是我的網站<br/>歡迎大家進來坐坐<br/>http://5at8.twidv.net<br/>http://100243.5at8.com</p>
-<h2>Contact</h2>
-<p>5at8 (5at85at8@gmail.com)<br/>      </p>
-
-
-    <h2>Download</h2>
-    <p>
-      You can download this project in either
-      <a href="http://github.com/5at8/5at8----------5at8----------5at8----------5at8----------5at8-----------/zipball/master">zip</a> or
-      <a href="http://github.com/5at8/5at8----------5at8----------5at8----------5at8----------5at8-----------/tarball/master">tar</a> formats.
-    </p>
-    <p>You can also clone the project with <a href="http://git-scm.com">Git</a>
-      by running:
-      <pre>$ git clone git://github.com/5at8/5at8----------5at8----------5at8----------5at8----------5at8-----------</pre>
-    </p>
-
-    <div class="footer">
-      get the source code on GitHub : <a href="http://github.com/5at8/5at8----------5at8----------5at8----------5at8----------5at8-----------">5at8/5at8----------5at8----------5at8----------5at8----------5at8-----------</a>
-    </div>
-
-  </div>
-
-  
+<P><FONT size=5>隨著時間一路下來<br />
+  <BR>
+網路上很多的<FONT color=#ff7000><STRONG>網賺事業</STRONG></FONT><br />
+<BR>
+真的有讓你賺到錢嗎<br />
+<BR>
+你是否聽到<FONT color=#00ccff><STRONG>傳直銷</STRONG></FONT><br />
+<BR>
+就會感到害怕呢<br />
+<BR>
+使你再也不相信任何網賺事業<br />
+<BR>
+現在你已經不用擔心這些了<br />
+<BR>
+有一家公司<FONT color=#ff7000><STRONG>5at8無網不利</STRONG></FONT><br />
+<BR>
+專門在幫客戶架設網站<br />
+<BR>
+歷史有20多年之久<br />
+<BR>
+這是<STRONG><FONT color=#ff7000>5at8無網不利</FONT></STRONG>的網站<br />
+<BR>
+<A title="5at8無網不利" href="http://www.5at8.com/" target="_blank">http://www.5at8.com</A><br />
+<BR>
+就在2011年的七月左右<br />
+<BR>
+總工程師群們已經研發了一個非常棒的系統<br />
+<BR>
+這個系統有非常多的功能<br />
+<BR>
+可以讓你<FONT color=#25ec00><STRONG>輕鬆架站</STRONG></FONT><br />
+<BR>
+甚至比架設部落格還簡單</FONT><br />
+<BR>
+<a href="http://100243.5at8.com" title="5at8無網不利" target="_blank"><img src="http://farm7.static.flickr.com/6081/6122991825_7b2c4667b4_b.jpg" alt="5at8無網不利" width="778" height="545" border="0" /></a><BR>
+<FONT size=5><br />
+後台每個會員都可以<STRONG><FONT color=#ff7000>免費申請一組網址<br />
+</FONT></STRONG><BR>
+如果不喜歡域名<br />
+<BR>
+也可以自己指定<STRONG><FONT color=#00ccff>DNS</FONT></STRONG><br />
+<BR>
+後台內建的<STRONG><FONT color=#25ec00>購物車模組</FONT></STRONG>、<STRONG><FONT color=#25ec00>最新消息模組</FONT></STRONG>、<STRONG><FONT color=#25ec00>新聞模組</FONT></STRONG>、<STRONG><FONT color=#25ec00>留言板模組</FONT></STRONG>、<STRONG><FONT color=#25ec00>投票模組</FONT></STRONG>、<STRONG><FONT color=#25ec00>跑馬燈模組</FONT></STRONG>....等<br />
+<BR>
+5at8無網不利都已經<STRONG><FONT color=#ff7000>客製化</FONT></STRONG>了<br />
+<BR>
+設定非常簡單<br />
+<BR>
+前台的<STRONG><FONT color=#00ccff>LOGO</FONT></STRONG>、<STRONG><FONT color=#00ccff>BANNAR</FONT></STRONG>、<STRONG><FONT color=#00ccff>選單</FONT></STRONG>、<STRONG><FONT color=#00ccff>版權宣告</FONT></STRONG>、<STRONG><FONT color=#00ccff>欄位</FONT></STRONG>....等<br />
+<BR>
+5at8無網不利也完全<FONT color=#ff7000><STRONG>客製化</STRONG></FONT>了<br />
+<BR>
+使用非常的簡單<br />
+<BR>
+就算你不會美工好了<br />
+<BR>
+後台內建的圖庫<br />
+<BR>
+5at8無網不利也提供了<STRONG><FONT color=#ff7000>SEO優化功能</FONT></STRONG><br />
+<BR>
+你只要後台設定你要的<STRONG><FONT color=#ff7000>關鍵字</FONT></STRONG><br />
+<BR>
+比如你是房屋仲介<br />
+<BR>
+你要賣房子<br />
+<BR>
+關鍵字設定<br />
+<BR>
+雅房,套房,別墅,住宅,租屋,租房,華廈,房東,房客,租房子,租屋,房屋出租<br />
+<BR>
+對網站排名非常有幫助<br />
+<BR>
+真的是用到嚇嚇叫<br />
+<BR>
+<STRONG><FONT color=#00ccff>只要10分鐘</FONT></STRONG><br />
+<BR>
+你就完成了一個擁有<FONT color=#ff7000><STRONG>購物車系統</STRONG></FONT>的網站<br />
+<BR>
+更棒的是<br />
+<BR>
+5at8無網不利有內建的<STRONG><FONT color=#25ec00>房地產仲介網站</FONT></STRONG>、<STRONG><FONT color=#25ec00>汽車銷售網站</FONT></STRONG>、<STRONG><FONT color=#25ec00>簡易開店購物車系統</FONT></STRONG>....等<br />
+<BR>
+你只要把聯繫方式<br />
+<BR>
+還有商品圖片上架<br />
+<BR>
+一些資料填寫<br />
+<BR>
+這樣就完成了<br />
+<BR>
+因為關鍵字那些<br />
+<BR>
+5at8無網不利已經內建幫你都設定好了<br />
+<BR>
+再來大家最關心的就是<STRONG><FONT color=#ff7000>客戶名單</FONT></STRONG></FONT><br />
+<BR>
+<a href="http://100243.5at8.com" title="5at8無網不利" target="_blank"><IMG src="http://farm7.static.flickr.com/6079/6122991859_51d505c3b1_b.jpg" alt="5at8無網不利" width="766" height="153" border="0"></a><BR>
+<FONT size=5><br />
+後台都可以全部看到<br />
+<BR>
+非常簡單方便<br />
+<BR>
+這些都是會員利用<STRONG><FONT color=#ff7000>這套系統</FONT></STRONG>做出來的網站<br />
+<BR>
+<A title="5at8無網不利" href="http://www.5at8.com/cgi-bin/big5/k/5a2?q1=chfile&amp;q2=ing.htm" target="_blank">http://www.5at8.com/cgi-bin/big5/k/5a2?q1=chfile&amp;q2=ing.htm</A><br />
+<BR>
+像我電腦也不是很厲害<br />
+<BR>
+我後台看著上面說明<br />
+<BR>
+一步一步做<br />
+<BR>
+我也能做到這樣<br />
+<BR>
+<A title="5at8無網不利" href="http://5at8.twidv.net/" target="_blank">http://5at8.twidv.net/</A><br />
+<BR>
+真的是很開心<br />
+<BR>
+還有<STRONG><FONT color=#25ec00>非常多的功能</FONT></STRONG>沒介紹<br />
+<BR>
+不過光<FONT color=#ff7000><STRONG>網站</STRONG></FONT>就值得了<br />
+<BR>
+加入5at8無網不利<br />
+<BR>
+<STRONG><FONT color=#ff7000>一季繳費只需2000元</FONT></STRONG><br />
+<BR>
+用了不值得<br />
+<BR>
+你之後不要在繳費就好了<br />
+<BR>
+你也不會吃虧的<br />
+<BR>
+5at8無網不利不走<STRONG><FONT color=#00ccff>傳直銷</FONT></STRONG><br />
+<BR>
+不過他有個更棒的制度<br />
+<BR>
+你每找1個人加入<br />
+<BR>
+就可以<STRONG><FONT color=#ff7000>賺取1000元獎金</FONT></STRONG><br />
+<BR>
+<STRONG><FONT color=#25ec00>固定每個人會有2個人是回饋給上線</FONT></STRONG><br />
+<BR>
+用這種方式經營<br />
+<BR>
+5at8無網不利是<STRONG><FONT color=#ff7000>8月1號</FONT></STRONG>正式起跑<br />
+<BR>
+像我經營1個月找了8個人<br />
+<BR>
+8個人都會回饋2個人給我<br />
+<BR>
+就是回饋16個人<br />
+<BR>
+等於我已經賺了2W4<br />
+<BR>
+如果他們用的不錯<br />
+<BR>
+會持續在繳費<br />
+<BR>
+<STRONG><FONT color=#00ccff>一季我又可以再賺一次</FONT></STRONG>2W4<br />
+<BR>
+是不是很棒<br />
+<BR>
+這是我的銷售頁<br />
+<BR>
+只要加入<STRONG><FONT color=#ff7000>5at8無網不利</FONT></STRONG><br />
+<BR>
+系統會自動產生像我這樣的銷售頁<br />
+<BR>
+<A title="5at8無網不利" href="http://100243.5at8.com" target="_blank">http://100243.5at8.com</A><br />
+<BR>
+如果大家有興趣<br />
+<BR>
+可以到這裡加入成為<STRONG><FONT color=#ff7000>正式會員</FONT></STRONG><br />
+<BR>
+<A title="5at8無網不利" href="http://100243.5at8.com" target="_blank">http://100243.5at8.com</A></FONT></P>
 </body>
 </html>
